# alloff-grpc-protos

./: README.md  go.mod  pyproject.toml  true
alloff-grpc-protos/: __init__.py
alloff_grpc_protos/: __init__.py
protos/: alloff_size.proto  alloffcategory.proto  brand.proto  courier.proto  exhibition.proto  health.proto  hometab.proto  inventory.proto  inventory_log.proto  inventory_receipt_log.proto  notification.proto  order.proto  order_analytics.proto  order_item.proto  order_item_action_log.proto  order_item_alimtalk_log.proto  order_item_memo.proto  order_item_payment_adjustment.proto  order_item_refund_update_log.proto  order_item_status_change_log.proto  package.proto  package_log.proto  payment.proto  product.proto  productGroup.proto  product_inquiry.proto  product_inquiry_reply.proto  received_item.proto  received_item_generation_log.proto  received_item_log.proto  refund_item.proto  refund_item_history.proto  shipping_candidate.proto  shipping_notice.proto  shipping_notice_item.proto  shipping_notice_log.proto  supplier.proto  topbanner.proto
scripts/: generate.sh
